fix Login method
