# feed-reader/api/swagger/swagger.yaml
@@ -42,38 +42,38 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
   /registerFeed:
-      # binds a127 app logic to a route
-      x-swagger-router-controller: crudFeed
-      post:
-        description: Add new feed
-        # used as the method name of the controller
-        operationId: registerFeed
-        parameters:
-          - name: feed
-            in: body
-            description: object to create newfeed
-            schema:
-              type: object
-              required:
-                - userName
-                - title
-              properties:
-                userName:
-                  type: string
-                title:
-                  type: string
-                URL:
-                  type: string
-        responses:
-          "200":
-            description: Success
-            schema:
-              $ref: "#/definitions/RegisterFeedResponse"
-          # responses may fall through to errors
-          default:
-            description: Error
-            schema:
-              $ref: "#/definitions/ErrorResponse"
+    # binds a127 app logic to a route
+    x-swagger-router-controller: crudFeed
+    post:
+      description: Add new feed
+      # used as the method name of the controller
+      operationId: registerFeed
+      parameters:
+        - name: feed
+          in: body
+          description: object to create newfeed
+          schema:
+            type: object
+            required:
+              - userName
+              - title
+            properties:
+              userName:
+                type: string
+              title:
+                type: string
+              URL:
+                type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/RegisterFeedResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
